--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -2,7 +2,8 @@
   <div class="mb-auto">
     <nav class="nav nav-masthead justify-content-center float-md-end">
       <a class="nav-link active" aria-current="page" href="/">Главная</a>
-<!--      <a class="nav-link" href="/about">Обо мне</a>-->
+      <a class="nav-link " href="/blog">Все статьи</a>
+      <a class="nav-link " href="/blog/add">Добавить статью</a>
       <a class="nav-link" href="https://github.com/VitMarKha/CulinaryBlog">GitHub</a>
     </nav>
   </div>
