--- a/src/main/resources/templates/blog-main.html
+++ b/src/main/resources/templates/blog-main.html
@@ -2,7 +2,6 @@
 <html xmlns:th="https://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${title}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -10,7 +9,14 @@
 <header th:insert="blocks/header :: header"></header>
 
 <main>
-
+    <div class="container mt-5">
+        <h1>Все статьи</h1>
+        <div th:each="post: ${posts}" class="alert alert-info mt-2">
+            <h3 th:text="${post.getName()}"></h3>
+            <p th:text="${post.getText()}"></p>
+            <a class="btn btn-warning " th:href="'/blog/' + ${post.getId()}">Читать отдельно</a>
+        </div>
+    </div>
 </main>
 
 <footer th:insert="blocks/footer :: footer"></footer>
