--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,10 +1,5 @@
 <div th:fragment="footer">
-  <div class="text-muted py-5">
-    <div class="container">
-      <p class="float-end mb-1">
-        <a href="#">Вернуться на верх</a>
-      </p>
-      <p class="mb-1">Все статьи были взяты из открытых источников, на владение ими я не претендую.</p>
-    </div>
+  <div class="pt-5 my-5 text-muted border-top">
+    Все статьи были взяты из открытых источников, на владение ими я не претендую.
   </div>
 </div>
