--- a/src/main/resources/templates/blog-full-article-edit.html
+++ b/src/main/resources/templates/blog-full-article-edit.html
@@ -21,6 +21,6 @@
   </div>
 </main>
 
-<footer th:insert="blocks/footer :: footer"></footer>
+<footer class="col-lg-8 mx-auto p-3 py-md-3" th:insert="blocks/footer :: footer"></footer>
 </body>
 </html>
