--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,5 +1,5 @@
 <div th:fragment="header">
-  <div class="mb-auto">
+  <div class="container mb-auto">
     <nav class="nav nav-masthead justify-content-center float-md-end">
       <a class="nav-link active" aria-current="page" href="/">Главная</a>
       <a class="nav-link " href="/blog">Все статьи</a>
